completed gray container css and html

--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,79 @@
-#header{
-    position: fixed;
-}
 
-.lion-img {  
+
+.header{
+    position: fixed;
+    top: 0px;
+    bottom: 0px;
+    width: 100%;
+    height: 7%;
+    z-index: 1;
+    background-color: white;
+} 
+
+.header-img {  
     margin-left: 24px;  
 }
 
-#title{
+.header-title{
     display: inline;   
     text-transform: uppercase; 
     font-family: Georgia, 'Times New Roman', Times, serif;
     border: 32px;
 }
 
-.academy-word{
+.header-academy{
     font-weight: lighter;
 }
 
 .navigation {
+    font-family: Georgia, 'Times New Roman', Times, serif;
     display: inline;
-    margin-left: 330px;
+    margin-left: 352px;
     margin-right: 24px; 
 }
 
 li {
     display: inline;   
-    padding-left: 40px;
+    padding-left: 16px;
+}
+
+.gray-background{
+    background-color: lightgray;
+    margin-left: 24px; 
+    margin-right: 24px;
+    padding: 210px 75px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 2rem;
+}
+
+.gray-paragraph{
+    font-size: 1rem;
+    position: relative;
+    bottom: 200px;
+    margin-left: 1000px;
+}
+
+.learning-header {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin-left: 900px;
+}
+
+.learning-img {
+    display: flex;
+    justify-content: center;
+    position: relative;
+    bottom: 500px;
+    margin: 0px 48px;
+    width: 60%; 
+    height: 400px;
+}
+
+.white-background {
+    position: relative;
+    bottom: 498px;
+    background-color:purple;
+    margin-left: 24px; 
+    margin-right: 24px;
+    padding: 200px 75px;
+    width: 50%; 
 }
